mobile page version 1 done

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 for reliable voice-cloning</li>
                             <li>Uses natural language processing tools to parse ebooks</li>
                             <li>Sample audio:</li>
-                                <audio controls style="margin-left: 20px;">
+                                <audio controls class="audio-player">
                                     <source src="media/example.wav" type="audio/wav">
                                     Your browser does not support the audio element.
                                 </audio> 
