--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <h2>Email</h2>
                         <p>
                         Quotes or 15 minute consultations are free of charge. Please contact me at: <br>                
-                        <a href="mailto:brinkdatascience@protonmail.com">brinkdatascience@protonmail.com</a> 
+                        <a href="mailto:info@brinkdatascience.com">info@brinkdatascience.com</a> 
                         for any inquiries or to set up a meeting.
                         </p>
                     </div>
