Updated contact form

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 Get in touch today for a consultation or quote on a project.
                             </p>
                             <button>
-                                <a href="#contact" style="color: white; text-decoration: none;">
+                                <a href="https://app.youform.com/forms/iegl3uw3" style="color: white; text-decoration: none;">
                                     <img src="images/button_icon.png" alt="Icon" class="button-icon">CONTACT
                                 </a>
                             </button>
@@ -269,7 +269,7 @@
                     <div class="box-container">
                         <h2>Email</h2>
                         <p>
-                        Quotes or 15 minute consultations are free of charge. Please contact me at: <br>                
+                        Quotes or 15 minute consultations are free of charge. Please fill out the <a href="https://app.youform.com/forms/iegl3uw3">contact form</a>, or email me at: <br>                
                         <a href="mailto:info@brinkdatascience.com">info@brinkdatascience.com</a> 
                         for any inquiries or to set up a meeting.
                         </p>
