--- a/index.html
+++ b/index.html
@@ -2,8 +2,25 @@
 <html lang="en">
 
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Brink Data Science: Consultancy and AI development services.">
+    <meta name="keywords" content="AI, machine learning, data science, large langue models, LLM, NLP, consultancy, software development">
+    <meta name="author" content="Rudy van den Brink">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="Brink Data Science">
+    <meta property="og:description" content="Consultancy and AI development services.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/rudyvdbrink/rudyvdbrink.github.io/refs/heads/main/images/logo.png">
+    <meta property="og:url" content="https://www.brinkdatascience.com">
+    
+    <meta name="twitter:card" content="shttps://raw.githubusercontent.com/rudyvdbrink/rudyvdbrink.github.io/refs/heads/main/images/logo.png">
+    <meta name="twitter:title" content="Brink Data Science">
+    <meta name="twitter:description" content="Consultancy and AI development services.">
+    <meta name="twitter:image" content="shttps://raw.githubusercontent.com/rudyvdbrink/rudyvdbrink.github.io/refs/heads/main/images/logo.png">
+      <meta name="robots" content="index, follow">
+
     <title>Brink Data Science</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/logo_gray.png" type="image/png">
@@ -14,8 +31,32 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-QK4YEWQVJJ');
+    </script>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "name": "Brink Data Science",
+      "url": "https://www.brinkdatascience.com",
+      "logo": "https://raw.githubusercontent.com/rudyvdbrink/rudyvdbrink.github.io/refs/heads/main/images/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Customer Service"
+        "email": "info@brinkdatascience.com"
+        "url": "https://app.youform.com/forms/iegl3uw3"
+      },
+      "sameAs": [
+        "https://www.linkedin.com/in/rudy-van-den-brink-3301b5283/",
+        "https://ruudvandenbrink.net/",
+        "https://github.com/rudyvdbrink",
+        "https://www.dropbox.com/s/vza0nrf7m3xru3n/CV_vandenBrink.pdf?dl=1",
+        "https://scholar.google.com/citations?user=gKseug0AAAAJ&hl=de",
+        "https://bsky.app/profile/rudyvdbrink.bsky.social"
+      ]
+    }
     </script>
 
 </head>
