--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Brink Data Science: Consultancy and AI development services.">
-    <meta name="keywords" content="AI, machine learning, data science, large langue models, LLM, NLP, consultancy, software development">
+    <meta name="keywords" content="AI, machine learning, data science, large langue models, LLM, NLP, consultancy, software development, Rudy van den Brink">
     <meta name="author" content="Rudy van den Brink">
     <meta name="robots" content="index, follow">
 
